[package]
name = "obs-countdown"
version = "0.0.2"
edition = "2021"
authors = ["Luciano Mammino"]
description = "A CLI tool to write countdown timer files for OBS Studio"
repository = "https://github.com/lmammino/obs-countdown"
keywords = ["obs", "countdown"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
winnow = "0.6.5"


[package.metadata.binstall]
https://github.com/lmammino/obs-countdown/releases/download/0.0.1/obs-countdown-aarch64-apple-darwin.tar.gz
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }-{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tar.gz"
